{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 17,
  "lineage": "0e579cd1-4a83-6797-b80a-89db024a0da0",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops_course_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-074123d343b7b179e",
            "arn": "arn:aws:ec2:ap-south-1:749339776047:instance/i-03058c0b02f95e8b3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03058c0b02f95e8b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0209c2be7726a3eb1"
              }
            ],
            "primary_network_interface_id": "eni-0209c2be7726a3eb1",
            "private_dns": "ip-10-0-0-80.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.80",
            "public_dns": "ec2-35-154-240-28.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.240.28",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "ManagedBy": "Terraform"
                },
                "tags_all": {
                  "ManagedBy": "Terraform"
                },
                "throughput": 125,
                "volume_id": "vol-02718bbaad60e68bd",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0531d3de860b6a399",
            "tags": {
              "Name": "devops_course_ec2_instance"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops_course_ec2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb8494666de029e6"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux",
            "module.security_group.aws_security_group.devops_course_sg",
            "module.vpc.aws_internet_gateway.devops_course_igw",
            "module.vpc.aws_route_table.devops_course_public_rt",
            "module.vpc.aws_route_table_association.devops_course_public_rta",
            "module.vpc.aws_subnet.devops_course_public_subnet",
            "module.vpc.aws_vpc.devops_course_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_course_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:749339776047:security-group/sg-0bb8494666de029e6",
            "description": "devops_course_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb8494666de029e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops_course_sg",
            "name_prefix": "",
            "owner_id": "749339776047",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops_course_sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops_course_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b8db71c91fae67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.devops_course_igw",
            "module.vpc.aws_route_table.devops_course_public_rt",
            "module.vpc.aws_route_table_association.devops_course_public_rta",
            "module.vpc.aws_subnet.devops_course_public_subnet",
            "module.vpc.aws_vpc.devops_course_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_course_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:749339776047:internet-gateway/igw-052eb9b9fb49b530f",
            "id": "igw-052eb9b9fb49b530f",
            "owner_id": "749339776047",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops_course_igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops_course_igw"
            },
            "vpc_id": "vpc-058b8db71c91fae67"
          },
          "dependencies": [
            "module.vpc.aws_vpc.devops_course_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_course_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:749339776047:route-table/rtb-0d6383e208f3ec698",
            "id": "rtb-0d6383e208f3ec698",
            "owner_id": "749339776047",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-052eb9b9fb49b530f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops_course_public_rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops_course_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b8db71c91fae67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.devops_course_igw",
            "module.vpc.aws_vpc.devops_course_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops_course_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0ecc88b9bab7d0d",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d6383e208f3ec698",
            "subnet_id": "subnet-0531d3de860b6a399"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.devops_course_igw",
            "module.vpc.aws_route_table.devops_course_public_rt",
            "module.vpc.aws_subnet.devops_course_public_subnet",
            "module.vpc.aws_vpc.devops_course_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_course_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:749339776047:subnet/subnet-0531d3de860b6a399",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0531d3de860b6a399",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "749339776047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops_course_public_subnet"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops_course_public_subnet"
            },
            "vpc_id": "vpc-058b8db71c91fae67"
          },
          "dependencies": [
            "module.vpc.aws_vpc.devops_course_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_course_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:749339776047:vpc/vpc-058b8db71c91fae67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0802e397c979398e7",
            "default_route_table_id": "rtb-00b1f1ad66e0146c5",
            "default_security_group_id": "sg-0d349532adc20deab",
            "dhcp_options_id": "dopt-0bb589f9ef94a02f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058b8db71c91fae67",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b1f1ad66e0146c5",
            "owner_id": "749339776047",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops_course_vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "devops_course_vpc"
            }
          }
        }
      ]
    }
  ]
}